# CSharp-ChaCha20-Unity

./: README.md
.github/workflows/: docfx-gh-pages.yml  dotnet.yml  jekyll-gh-pages.yml
Assets/: CSChaCha20Unity_Test.unity
Assets/CSChaCha20Unity/: CSChaCha20Unity.cs  CSChaCha20Unity.csproj  SimdVectorSharp.cs
Assets/CSChaCha20Unity/Plugins/macos/arm64/: libSimdVector.dylib
Assets/CSChaCha20Unity/Plugins/macos/x86_64/: libSimdVector.dylib
Assets/CSChaCha20Unity/Test/: ChaCha20Test.cs
Assets/Test/: CSChaCha20Unity.Tests.csproj  ChaCha20Test.cs  banana.txt
docs/: docfx.json  index.md
docs/api/: index.md
simd_vector/: Cargo.toml  Dockerfile  build.ps1
simd_vector/src/: lib.rs
src/: CSChaCha20.cs
